--- a/.github/workflows/ci-basic-web.yml
+++ b/.github/workflows/ci-basic-web.yml
@@ -1,3 +1,6 @@
+
+ci-basic-web.yaml:
+
 # Nombre del workflow
 name: CI/CD Frontend
 
@@ -44,5 +47,4 @@ jobs:
                 context: .
                 push: true
                 tags: alexcano29/ssv:latest
-
 
