--- a/.github/workflows/ci-basic-web.yaml
+++ b/.github/workflows/ci-basic-web.yaml
@@ -1,46 +1,67 @@
-# Nombre del workflow
-name: CI/CD Frontend
+name: CI/CD Fullstack (Frontend + API)
 
-# Controla lo que se va a ejecutar (Trigger) pull, push, pull request
 on:
-    push:
-        branches: [release, develop]
-    pull_request:
-        branches: [release, develop]
-           
-# Pasos a realizar
+  push:
+    branches: [main, release]
+  pull_request:
+    branches: [main]
+
 jobs:
-    sistemas-ventas-web:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4 #Clonar el repositorio actual
-            - uses: actions/setup-node@v4   # Usar Node
-              with:
-                node-version: 22.16.0 # Version de Node
-            
-            # Cargar cache de node_modules, para reducir tiempo de instalaciones en proximas ejecuciones
-            - name: Cache node modules
-              id: node-cache
-              uses: actions/cache@v4
-              with:
-                path: sistema-ventas-web/node_modules
-                key: ${{ runner.os}}-node-${{ hashFiles('package-lock.json')}}
-            
-            # Instalar las dependencias
-            - name: Install dependencies
-              # No ejecutar si se obtuvo nnode_modules de cache
-              if: steps.node-cache.outputs.cache-hit != 'true'
-              run: npm install
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    env:
+      DOCKER_IMAGE: alexcano29/ssv-fullstack
+      TAG: ${{ github.sha }}
 
-              name: Log in to Docker Hub
-              uses: docker/login-action@v3
-              with:
-                username: ${{ secrets.DOCKER_USERNAME }}
-                password: ${{ secrets.DOCKER_PASSWORD }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-              name: Build and push Docker image
-              uses: docker/build-push-action@v5
-              with:
-                context: .
-                push: true
-                tags: alexcano29/ssv:latest
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.16.0
+
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            node_modules
+            sistema-ventas-web/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Install frontend dependencies
+        working-directory: sistema-ventas-web
+        run: npm ci
+
+      - name: Build Angular
+        working-directory: sistema-ventas-web
+        run: npm run build -- --configuration=production
+
+      - name: Prepare API files
+        run: |
+          mkdir -p api
+          cp db.json api/
+          echo '#!/bin/sh
+          echo "🔄 Starting JSON Server on port 3000"
+          json-server --watch /app/api/db.json --port 3000 --host 0.0.0.0' > api/api-start.sh
+          chmod +x api/api-start.sh
+
+      - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile.fullstack
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: |
+            ${{ env.DOCKER_IMAGE }}:${{ env.TAG }}
+            ${{ env.DOCKER_IMAGE }}:latest
+          build-args: |
+            NODE_ENV=production
